--- a/laser.ui
+++ b/laser.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>339</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,6 +80,9 @@
        </item>
        <item>
         <widget class="QSpinBox" name="wavelength">
+         <property name="keyboardTracking">
+          <bool>false</bool>
+         </property>
          <property name="minimum">
           <number>680</number>
          </property>
